# ICONEval

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint  CITATION.cff  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml  sbatch_icon_run.sh
.claude/agents/: data-inspector.md  esmvaltool-fixer.md  variable-validator.md
.claude/agents/shared_memory/: implementation_plan.md  variable_mappings.json
.github/: dependabot.yml
.github/workflows/: pytest_coverage_comment.yml  run_tests.yml  tests.yml  update_coverage_badge.yml
ClimateEval/: _config.py  _data_discovery.py  _dependencies.py  _io_handler.py  _job.py  _model_config.py  _preprocessor.py  _recipe.py  _simulation_info.py  _templates.py  _typing.py  _variable_mapping.py  esmvaltool_config_template.yml  main.py
ClimateEval/model_configs/: generic_template.yml  icon.yml  icon_xpp.yml  mpas.yml
ClimateEval/more_recipe_templates/: recipe_check_data_availability.yml
ClimateEval/output_handling/: __init__.py  _summarize.py  plots2pdf.py  publish_html.py
ClimateEval/recipe_templates/: recipe_basics_maps.yml  recipe_basics_profiles.yml  recipe_basics_timeseries.yml  recipe_clouds_annual_cycles_large_scale_regions.yml  recipe_clouds_maps.yml  recipe_clouds_profiles.yml  recipe_clouds_timeseries.yml  recipe_consistency_checks_timeseries.yml  recipe_ocean_annual_cycles.yml  recipe_ocean_timeseries.yml  recipe_precipitation_diurnal_cycles.yml  recipe_sanity_checks.yml  recipe_sea_ice_annual_cycles.yml  recipe_sea_ice_maps.yml  recipe_sea_ice_timeseries.yml  recipe_tuning_timeseries.yml
agents/: README.md  code-implementer.md
agents/shared_memory/: cf_required_vars.json  implementation_plan.md
doc/: customization.md  esmvaltool.md  esmvaltool_container.md  faqs.md  generate_tag_table.py  icon_output_format.md  install_from_source.md  setup_module.md  tags.md  workflow.md
icon_run/: exp.example_for_iconeval.run
iconeval/: __init__.py  _config.py  _dependencies.py  _io_handler.py  _job.py  _logging.py  _recipe.py  _session.py  _simulation_info.py  _templates.py  _typing.py  esmvaltool_config_template.yml  main.py
iconeval/more_recipe_templates/: recipe_check_data_availability.yml
iconeval/output_handling/: __init__.py  _summarize.py  plots2pdf.py  publish_html.py
iconeval/recipe_templates/: recipe_basics_annual_cycles.yml  recipe_basics_maps.yml  recipe_basics_profiles.yml  recipe_basics_timeseries.yml  recipe_basics_zonal_mean_lines.yml  recipe_clouds_annual_cycles_large_scale_regions.yml  recipe_clouds_annual_cycles_stratocumulus_regions.yml  recipe_clouds_maps.yml  recipe_clouds_profiles.yml  recipe_clouds_timeseries.yml  recipe_consistency_checks_scatterplot.yml  recipe_consistency_checks_timeseries.yml  recipe_daily_histograms.yml  recipe_ocean_annual_cycles.yml  recipe_ocean_maps.yml  recipe_ocean_timeseries.yml  recipe_ocean_zonal_mean_lines.yml  recipe_portrait_plot.yml  recipe_precipitation_diurnal_cycles.yml  recipe_precipitation_histogram.yml  recipe_sanity_checks.yml  recipe_sea_ice_annual_cycles.yml  recipe_sea_ice_maps.yml  recipe_sea_ice_timeseries.yml  recipe_subdaily_precipitation_diurnal_cycles.yml  recipe_tuning_profiles.yml  recipe_tuning_timeseries.yml  recipe_tuning_zonal_mean_lines.yml
modeleval/: __init__.py  _config.py  _dependencies.py  _io_handler.py  _job.py  _logging.py  _model_config.py  _recipe.py  _simulation_info.py  _templates.py  _typing.py  esmvaltool_config_template.yml  main.py
modeleval/model_configs/: cesm.yml  emac.yml  generic_template.yml  icon.yml
modeleval/output_handling/: __init__.py  _summarize.py  plots2pdf.py  publish_html.py
modeleval/recipe_templates/: recipe_basics_zonal_mean_lines.yml  recipe_clouds_annual_cycles_stratocumulus_regions.yml  recipe_consistency_checks_scatterplot.yml  recipe_ocean_maps.yml  recipe_ocean_zonal_mean_lines.yml  recipe_portrait_plot.yml  recipe_precipitation_histogram.yml  recipe_tuning_profiles.yml  recipe_tuning_zonal_mean_lines.yml
tests/: __init__.py  conftest.py
tests/expected_output/test_icon_evaluation_multi_input_success/esmvaltool_output/: index.html  index_atmosphere.html  index_land.html  index_ocean.html  index_sanity-consistency-checks.html
tests/expected_output/test_icon_evaluation_multi_input_success/recipes/: recipe_basics_maps.yml  recipe_portrait_plot.yml
tests/expected_output/test_icon_evaluation_single_input/esmvaltool_output/: index.html  index_atmosphere.html  index_ocean.html  index_sanity-consistency-checks.html
tests/expected_output/test_icon_evaluation_single_input/recipes/: recipe_basics_profiles.yml  recipe_basics_zonal_mean_lines.yml  recipe_clouds_maps.yml  recipe_clouds_timeseries.yml  recipe_consistency_checks_scatterplot.yml  recipe_consistency_checks_timeseries.yml  recipe_ocean_annual_cycles.yml  recipe_ocean_maps.yml  recipe_ocean_timeseries.yml  recipe_ocean_zonal_mean_lines.yml  recipe_sea_ice_annual_cycles.yml  recipe_sea_ice_maps.yml  recipe_tuning_zonal_mean_lines.yml
tests/expected_output/test_icon_evaluation_single_input_custom_recipe_options/esmvaltool_output/: debug.html  index_sanity-consistency-checks.html
tests/expected_output/test_icon_evaluation_single_input_custom_recipe_options/recipes/: recipe_basics_zonal_mean_lines.yml
tests/expected_output/test_icon_evaluation_single_input_custom_recipe_options_ignore/esmvaltool_output/: index.html
tests/expected_output/test_icon_evaluation_single_input_custom_srun_ignore/recipes/: recipe_basics_zonal_mean_lines.yml
tests/expected_output/test_summarize_info_missing/: debug.html  index.html  index_atmosphere.html  index_land.html  index_ocean.html  index_sanity-consistency-checks.html
tests/integration/: __init__.py  test_main.py
tests/integration/output_handling/: test__summarize.py  test_publish_html.py
tests/sample_data/recipe_templates/: recipe_basics_zonal_mean_lines.yml
tests/unit/: test__dependencies.py  test__io_handler.py  test__job.py  test__logging.py  test__simulation_info.py  test__templates.py  test__typing.py
(+79 files in other folders)
