[project]
name = "modeleval"
version = "1.0.0"
description = "Convenient evaluation of Earth System Model output with ESMValTool"
authors = [
    {name = "Manuel Schlund", email = "manuel.schlund@dlr.de"},
    {name = "Lisa Bock", email = "lisa.bock@dlr.de"},
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ESMValTool", "Earth System Model Evaluation", "ICON", "CESM", "MPAS", "Climate"]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fire",
    "loguru",
    "prov",
    "pylatex",
    "python-swiftclient",
    "pyyaml",
    "requests",
]

[project.optional-dependencies]
develop = [
    "pre-commit",
    "py-markdown-table",
]

[project.scripts]
modeleval = "modeleval.main:main"
# Backward compatibility: keep iconeval as an alias
iconeval = "modeleval.main:main"
plots2pdf = "modeleval.output_handling.plots2pdf:main"
publish_html = "modeleval.output_handling.publish_html:main"

[tool.setuptools]
packages = ['modeleval', 'modeleval.output_handling']

[tool.setuptools.package-data]
modeleval = [
    "esmvaltool_config_template.yml",
    "recipe_templates/*.yml",
    "more_recipe_templates/*.yml",
    "model_configs/*.yml",
]

[tool.codespell]
ignore-words-list = "emac,oce,pres"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",     # Dynamically typed expressions (typing.Any) are disallowed
    "C901",       # Function is too complex
    "DTZ006",     # `datetime.datetime.fromtimestamp()` called without a `tz` argument
    "DTZ007",     # Naive datetime constructed using `datetime.datetime.strptime()` without %z
    "G004",       # Logging statement uses f-string"
    "PLR0912",    # Too many branches
    "PLR0913",    # Too many arguments in function definition
    "PLR0915",    # Too many statements
    "PLW2901",    # `for` loop variable overwritten by assignment target
    "T201",       # `print` found
]
future-annotations = true
[tool.ruff.lint.pydocstyle]
convention = "numpy"
